<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/heading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:visibility="visible">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Welcome_to_alc_4_0"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:fontFamily="@font/fira_sans_bold_italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome to ALC 4.0" />

    <Button
        android:id="@+id/btnMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/my_profile"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAboutALC"
        tools:text="MY PROFILE" />

    <Button
        android:id="@+id/btnAboutALC"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/about_alc"
        android:textColor="@android:color/background_dark"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        tools:text="ABOUT ALC" />


</androidx.constraintlayout.widget.ConstraintLayout>